Thu Jun  9 18:24:16 2005  Tanaka Akira  <akr@m17n.org>

	* configure.in, eval.c, gc.c: use libunwind only on HP-UX.
	  [ruby-dev:26297]

Wed Jun  8 12:25:59 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* array.c (rb_ary_nitems): add the block feature to Array#nitems.
	  suggested by Bertram Scharpf <lists@bertram-scharpf.de> in
	  [ruby-talk:134083].

Wed Jun  8 11:11:34 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* bignum.c (get2comp): revert all prior changes, and calculate
	  proper 2's complement for negative numbers.

Wed Jun  8 08:33:10 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enum.c (enum_min_by, enum_max_by): return nil if no iteration.
	  fixed: [ruby-dev:26245]

	* eval.c (rb_need_block): ensure a block is given.

	* eval.c (backtrace): skip successive frames sharing same node.

Wed Jun  8 01:27:06 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* bignum.c (bignorm): fixed a bug in normalizing negative numbers
	  reported from Honda Hiroki <hhonda@ipflex.com>.  normalizing
	  should not trim leading zeros from negative numbers.

	* bignum.c (rb_cstr_to_inum): must remove leading zeros for this
	  case.

Wed Jun  8 00:15:08 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/socket/socket.c (ruby_getaddrinfo__aix): merged a patch from
	  KUBO Takehiro <kubo@jiubao.org> to support AIX.  [ruby-list:40832]

Wed Jun  8 00:09:01 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/yaml/rubytypes.rb (Array::to_yaml): merged a patch from
	  Tilman Sauerbeck <tilman@code-monkey.de>.  [ruby-core:05055]

	* lib/yaml/rubytypes.rb (Hash::to_yaml): ditto.

Wed Jun  8 00:00:01 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/curses/curses.c (curses_insertln): merged a patch from
	  TAKAHASHI Tamotsu <ttakah@lapis.plala.or.jp>.  [ruby-ext:02305]

Tue Jun  7 19:34:15 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/irb/init.rb (IRB::IRB.rc_file_generators): more flexible
	  IRB.rc_file_generators.  [ruby-core:05163]
